--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
  <title>Tribute Page</title>
 </head>
 <body>
- <div class="wrapper">
-  <h1>Hello wrold!</h1>
+ <main id="main">
+     <h1 id="title">Cristiano Ronaldo</h1>
+     <div id="img-div">
+        <figure id="image-id"> 
+        <img id="image" src="cristiano.jpg" alt="cristiano ronaldo">
+        <figcaption id="img-caption">Cristiano celebrating his goal</figcaption>
+    </figure>
+     </div>
+
+     <div id="tribute-info">
+         <h2>Cristiano's Career Achievements</h2>
+         <ul>
+             <li><b>2014</b>UEFA Super Cup</li>
+             <li><b>2014</b>Supercopa de España runner-up</li>
+             <li><b>2014</b>FIFA Club World Cup</li>
+             <li><b>2015</b>UEFA Champions League</li>
+             <li><b>2014</b>UEFA European Championship</li>
+             <li><b>2014</b>UEFA Super Cup</li>
+         </ul>
+     </div>
+ </main>
+  
  </div>
 </body>
 </html>
