--- a/index.html
+++ b/index.html
@@ -8,27 +8,30 @@
 </head>
 <body>
  <main id="main">
-     <h1 id="title">Cristiano Ronaldo</h1>
-     <div id="img-div">
-        <figure id="image-id"> 
-        <img id="image" src="cristiano.jpg" alt="cristiano ronaldo">
-        <figcaption id="img-caption">Cristiano celebrating his goal</figcaption>
-    </figure>
-     </div>
+  <h1 id="title">Cristiano Ronaldo</h1>
+  <div id="img-div">
+     <figure id="image-id"> 
+     <img id="image" src="cristiano.jpg" alt="cristiano ronaldo">
+     <figcaption id="img-caption">Cristiano celebrating his goal</figcaption>
+ </figure>
+  </div>
 
-     <div id="tribute-info">
-         <h2>Cristiano's Career Achievements</h2>
-         <ul>
-             <li><b>2014</b>UEFA Super Cup</li>
-             <li><b>2014</b>Supercopa de España runner-up</li>
-             <li><b>2014</b>FIFA Club World Cup</li>
-             <li><b>2015</b>UEFA Champions League</li>
-             <li><b>2014</b>UEFA European Championship</li>
-             <li><b>2014</b>UEFA Super Cup</li>
-         </ul>
-     </div>
- </main>
-  
- </div>
+  <div id="tribute-info">
+      <h2>Cristiano's Career Achievements</h2>
+      <ul>
+          <li><b>2007 -08</b>Goalscoring: The European Golden Shoe was awarded to Christiano Ronaldo who was the top goalscorer in Europe.</li>
+          <li><b>2017 -18</b>UEFA Champions League top scorer: Christiano Ronaldo scord 15 goals in the UEFA Champions League.</li>
+          <li><b>All time</b>Ronaldo is the UEFA Champions league all-time top goalscorer with 130 goals while Lionel Messi is second with 115 to his name.up</li>
+          <li><b>2014 _15</b>La Liga top scorer: Cristiano Ronaldo scored 48 goals in 35 matches</li>
+          <li><b>2007 -08</b>Premier League top scorer: Ronaldo scored 31 goals in 34 matches</li>
+          <li><b>2008</b>International man of the match awards Luzhniki Stadium, Moscow, Russia, opponent Chelsea competion 2008 UEFA champions league</li>
+          <li><b>2010</b>International man of the match awards Cape Town Stadium, Cape Town, South Africa opponent Brazil competition Fifa world cup</li>
+          <li><b>2017</b>International man of the match awards Otkritie Arena, Moscow, Russia opponent  Russia 2017 FIFA Confederations Cup</li>
+          <li><b>2018</b>International man of the match awards Fisht Olympic Stadium, Sochi, Russia opponent Spain 2018 FIFA World Cup</li>
+          <li><b>2019</b>International man of the match awards Estádio do Dragão, Porto, Portugal opponent   Switzerland 2019 UEFA Nations League Finals</li>
+      </ul>
+  </div>
+</main>
+
 </body>
 </html>
