corrections to pass test

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1 id="title">Cristiano Ronaldo</h1>
   <div id="img-div">
      <figure id="image-id"> 
-     <img id="image" src="cristiano.jpg" alt="cristiano ronaldo">
+     <img id="image" src="https://akm-img-a-in.tosshub.com/indiatoday/images/story/202002/RTS2Z13T.jpeg?Od8vtUmuo6Xz6ubDmyJYpgHH3m5gxj29&size=770:433" alt="cristiano ronaldo">
      <figcaption id="img-caption">Cristiano celebrating his goal</figcaption>
  </figure>
   </div>
