added test scripts

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
   </div>
   <h2>For more information please visit<a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo "> here</a></h2>
 </main>
-
+<script src = "https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> 
 </body>
 </html>
